Work on basic animation control system

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,6 @@
-name: Devathon Project
+name: OMGMachines
 description: A project for the Devathon contest
 version: 1.0.0
-author: Your Name Here
+author: Cryptkeeper
 
 main: org.devathon.contest2016.DevathonPlugin
-
