--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: OMGMachines
-description: A project for the Devathon contest
+name: BobTheLearningZombie
+description: A machine learning Zombie that tries to kill you!
 version: 1.0.0
 author: Cryptkeeper
 
